@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/cdrtools/cdrtools-0.ebuild,v 1.1 2009/05/28 15:16:56 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/cdrtools/cdrtools-0.ebuild,v 1.2 2009/12/15 16:04:28 abcd Exp $
 
 DESCRIPTION="Virtual for command-line recorders cdrtools and cdrkit"
 HOMEPAGE="http://www.gentoo.org"
@@ -8,7 +8,7 @@ SRC_URI=""
 
 LICENSE=""
 SLOT="0"
-KEYWORDS="alpha amd64 arm hppa ia64 ~mips ppc ppc64 s390 sh sparc x86 ~x86-fbsd"
+KEYWORDS="alpha amd64 arm hppa ia64 ~mips ppc ppc64 s390 sh sparc x86 ~x86-fbsd ~x86-freebsd ~x86-interix ~amd64-linux ~ia64-linux ~x86-linux ~sparc-solaris ~x86-solaris"
 IUSE=""
 
 RDEPEND="|| ( app-cdr/cdrtools app-cdr/cdrkit )"
