@@ -1,6 +1,10 @@
 # ChangeLog for virtual/cdrtools
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/cdrtools/ChangeLog,v 1.1 2009/05/28 15:16:56 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/cdrtools/ChangeLog,v 1.2 2009/12/15 16:04:28 abcd Exp $
+
+  15 Dec 2009; Jonathan Callen <abcd@gentoo.org> cdrtools-0.ebuild:
+  Add prefix keywords (~x86-freebsd ~x86-interix ~amd64-linux ~ia64-linux
+  ~x86-linux ~sparc-solaris ~x86-solaris)
 
 *cdrtools-0 (28 May 2009)
 
